helm/cadangan-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadangan-api
  labels:
    app: cadangan-api
spec:
  selector:
    matchLabels:
      app: cadangan-api
  replicas: 1
  template:
    metadata:
      labels:
        app: cadangan-api
    spec:
      containers:
        - name: cadangan-api
          image: dev4w4n/emasjid-cadangan-api:v2.3.1
          imagePullPolicy: Never
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m" 
          ports:
            - containerPort: 8083
          args: ["./wait-for-it.sh", "saas-api:8080", "--", "./cadangan-api"]
