helm/khairat-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khairat-api
  labels:
    app: khairat-api
spec:
  selector:
    matchLabels:
      app: khairat-api
  replicas: 1
  template:
    metadata:
      labels:
        app: khairat-api
    spec:
      containers:
        - name: khairat-api
          image: dev4w4n/emasjid-khairat-api:v2.3.1
          imagePullPolicy: Never
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m" 
          ports:
            - containerPort: 8081
          args: ["./wait-for-it.sh", "saas-api:8080", "--", "./khairat-api"]
