helm/public-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-web
  labels:
    app: public-web
spec:
  selector:
    matchLabels:
      app: public-web
  replicas: 1
  template:
    metadata:
      labels:
        app: public-web
    spec:
      containers:
        - name: public-web
          image: dev4w4n/emasjid-public-web:v2.3.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "500m"   
          ports:
            - containerPort: 80
