helm/saas-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-api
  labels:
    app: saas-api
spec:
  selector:
    matchLabels:
      app: saas-api
  replicas: 1
  template:
    metadata:
      labels:
        app: saas-api
    spec:
      containers:
        - name: saas-api
          image: dev4w4n/emasjid-saas:v2.3.1
          imagePullPolicy: Never
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m" 
          ports:
            - containerPort: 8080
          args: ["./wait-for-it.sh", "postgres:5432", "--", "./start-and-seed.sh"]
