helm/tabung-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabung-api
  labels:
    app: tabung-api
spec:
  selector:
    matchLabels:
      app: tabung-api
  replicas: 1
  template:
    metadata:
      labels:
        app: tabung-api
    spec:
      containers:
        - name: tabung-api
          image: dev4w4n/emasjid-tabung-api:v2.3.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m" 
          ports:
            - containerPort: 8082
          args: ["./wait-for-it.sh", "saas-api:8080", "--", "./tabung-api"]
