helm/tetapan-public-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetapan-public-api
  labels:
    app: tetapan-public-api
spec:
  selector:
    matchLabels:
      app: tetapan-public-api
  replicas: 1
  template:
    metadata:
      labels:
        app: tetapan-public-api
    spec:
      containers:
        - name: tetapan-public-api
          image: dev4w4n/emasjid-tetapan-public-api:v2.3.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "125m" 
          ports:
            - containerPort: 8086
          args: ["./wait-for-it.sh", "saas-api:8080", "--", "./tetapan-public-api"]
