helm/cadangan-public-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadangan-public-api
  labels:
    app: cadangan-public-api
spec:
  selector:
    app: cadangan-public-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8084      # port exposed by the Service inside the Kubernetes cluster.
      targetPort: 8084 # The container's port (containerPort) in the pod.
      nodePort: 30084 # The host port that maps traffic to the Service, accessible outside the cluster.
