helm/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000      # port exposed by the Service inside the Kubernetes cluster.
      targetPort: 80 # The container's port (containerPort) in the pod.
      nodePort: 30000 # The host port that maps traffic to the Service, accessible outside the cluster.
