helm/khairat-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: khairat-api
  labels:
    app: khairat-api
spec:
  selector:
    app: khairat-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081      # port exposed by the Service inside the Kubernetes cluster.
      targetPort: 8081 # The container's port (containerPort) in the pod.
      nodePort: 30081 # The host port that maps traffic to the Service, accessible outside the cluster.
