helm/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None # Makes the service headless
  selector:
    app: postgres # Matches the label in the StatefulSet
