helm/saas-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-api
  labels:
    app: saas-api
spec:
  selector:
    app: saas-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080      # port exposed by the Service inside the Kubernetes cluster.
      targetPort: 8080 # The container's port (containerPort) in the pod.
      nodePort: 30080 # The host port that maps traffic to the Service, accessible outside the cluster.
